<resources>
    <string name="app_name">FormApplication</string>
    <string name="details_of_inspected_terms">Details of Inspected Terms:</string>
    <string name="details_of_inspected_filded">Details of Inspected Filled:</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="mobile">Mobile</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="test_field">Test Field</string>
    <string-array name="cities">
        <item>Jaipur</item>
        <item>Kolkata</item>
        <item>Bangalore</item>
        <item>Noida</item>
        <item>Mangalore</item>
    </string-array>
</resources>