<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/text_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/details_of_inspected_terms"
        android:textColor="@color/white" />

    <!--TextInput-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/textArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_btn"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="16dp"
        android:paddingEnd="10dp"
        android:paddingBottom="16dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/blue_color"
            android:layout_weight="1">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="8dp"
                android:inputType="text"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/blue_color"
            android:layout_weight="1">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="8dp"
                android:inputType="text"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/blue_color"
            android:layout_weight="1">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_date"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="8dp"
                android:inputType="date"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/blue_color"
            android:layout_weight="1">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="8dp"
                android:inputType="number"
                android:maxLength="10"
                android:minEms="10"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/location"
            android:textColorHint="@color/blue_color"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu">
            <AutoCompleteTextView
                android:id="@+id/at_location"
                android:padding="8dp"
                android:textAlignment="center"
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/blue_color"
            android:layout_weight="1">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_desc"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="8dp"
                android:inputType="text"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/test_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/blue_color"
            android:layout_weight="1">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_test_field"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="8dp"
                android:inputType="text"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <!--Buttons-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_color"
            android:text="@string/save"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_color"
            android:text="@string/next"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>